# big_data_sort

./: CMakeLists.txt  generator.py  main.cpp
